--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <body>
     <nav>
         <div class="nav-content container">
-            <div class="logo">YUFAN</div>
+            <div class="logo">税海玉</div>
             <div class="social-links">
                 <a href="#" class="social-link"><i class="fab fa-github"></i></a>
                 <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
